# inkathon

./: .gitignore  README.md  pnpm-lock.yaml
contracts/: .gitignore  Cargo.toml  build-all.sh  jest-test-all.sh  package.json  postinstall.sh  tsconfig.json
contracts/data/: assets.ts
contracts/deployments/abaxcaller/: abaxcaller.contract  abaxcaller.json  abaxcaller.wasm
contracts/deployments/greeter/: alephzero-testnet.ts  alephzero.ts
contracts/deployments/oracleexample/: alephzero.ts  oracleexample.contract  oracleexample.json  oracleexample.wasm
contracts/deployments/psp22/: psp22.contract  psp22.json  psp22.wasm
contracts/scripts/: createAbaxTokenPools.ts  deploy.ts  deploy_oracleexample.ts
contracts/scripts/utils/: getDeploymentData.ts  writeContractAddresses.ts
contracts/src/abaxcaller/: Cargo.toml  lib.rs
contracts/src/abaxcaller/abax/traits/: abacus_token.rs  flash_loan_receiver.rs  mod.rs  price_feed.rs  psp22.rs
contracts/src/abaxcaller/abax/traits/dia_oracle/: getter.rs  imports.rs  setter.rs
contracts/src/abaxcaller/abax/traits/lending_pool/: a_token_interface.rs  borrow.rs  deposit.rs  errors.rs  events.rs  flash_loan.rs  imports.rs  liquidate.rs  maintain.rs  manage.rs  types.rs  v_token_interface.rs  view.rs
contracts/src/abaxcaller/abax/traits/lending_pool/structs/: reserve_data.rs
contracts/src/abaxcaller/andromedacaller/: lib.rs
contracts/src/abaxcaller/andromedacaller/traits/: andromedacaller.rs  mod.rs
contracts/src/andromedacaller/: Cargo.toml  lib.rs
contracts/src/oracleexample/: Cargo.toml  lib.rs
docs/andromeda/: azero_trading_pair.contract  psp22_trading_pair.contract  router.contract  token_lock.contract
(+180 files in other folders)
